<resources>
    <string name="app_name">Phonely</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="new_password">New Password</string>
    <string name="new_username">New Username</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>